grammar/EvansParser.py
# Generated from grammar/Evans.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class EvansParser ( Parser ):

    grammarFileName = "Evans.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "':'", "'('", "')'", "','", 
                     "';'", "'='", "'.'", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'['", "']'", "'!'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'<'", "'>'", "'<='", "'>='", "'!='", "'=='", 
                     "'&&'", "'||'", "'?'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'class'", "'attr'", "'state'", "'func'", 
                     "'pred'", "'oper'", "'if'", "'else'", "'elif'", "'for'", 
                     "'while'", "'ret'", "'break'", "'cont'", "'when'", 
                     "'eff'", "'exec'", "'init'", "'goal'", "'main'", "'list'", 
                     "'bool'", "'str'", "'float'", "'int'", "'dom'", "'num'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING_LITERAL", "DECIMAL_LITERAL", "FLOAT_LITERAL", 
                      "BOOL_LITERAL", "CLASS", "ATTR", "STATE", "FUNC", 
                      "PRED", "OPER", "IF", "ELSE", "ELIF", "FOR", "WHILE", 
                      "RET", "BREAK", "CONT", "WHEN", "EFF", "EXEC", "INIT", 
                      "GOAL", "MAIN", "LIST", "BOOL", "STR", "FLOAT", "INT", 
                      "DOM", "NUM", "ID", "COMMENT", "WS" ]

    RULE_codeFile = 0
    RULE_classDeclaration = 1
    RULE_classBody = 2
    RULE_attributeList = 3
    RULE_stateList = 4
    RULE_domainList = 5
    RULE_constructorList = 6
    RULE_functionList = 7
    RULE_goalList = 8
    RULE_predicateList = 9
    RULE_operatorList = 10
    RULE_domainDeclaration = 11
    RULE_functionDeclaration = 12
    RULE_goalDeclaration = 13
    RULE_mainDeclaration = 14
    RULE_domainBody = 15
    RULE_constructorDeclaration = 16
    RULE_genVarDeclaration = 17
    RULE_varDeclarator = 18
    RULE_variableInitializer = 19
    RULE_listInitializer = 20
    RULE_genParameters = 21
    RULE_predicateDeclaration = 22
    RULE_operatorDeclaration = 23
    RULE_operatorBody = 24
    RULE_operatorCodeBlock = 25
    RULE_genCodeBlock = 26
    RULE_blockStatement = 27
    RULE_genStatement = 28
    RULE_genAssignment = 29
    RULE_genExpression = 30
    RULE_createNew = 31
    RULE_methodCall = 32
    RULE_typeConversion = 33
    RULE_expressionList = 34
    RULE_returnType = 35
    RULE_genType = 36
    RULE_genLiteral = 37
    RULE_classType = 38
    RULE_embeddedType = 39

    ruleNames =  [ "codeFile", "classDeclaration", "classBody", "attributeList", 
                   "stateList", "domainList", "constructorList", "functionList", 
                   "goalList", "predicateList", "operatorList", "domainDeclaration", 
                   "functionDeclaration", "goalDeclaration", "mainDeclaration", 
                   "domainBody", "constructorDeclaration", "genVarDeclaration", 
                   "varDeclarator", "variableInitializer", "listInitializer", 
                   "genParameters", "predicateDeclaration", "operatorDeclaration", 
                   "operatorBody", "operatorCodeBlock", "genCodeBlock", 
                   "blockStatement", "genStatement", "genAssignment", "genExpression", 
                   "createNew", "methodCall", "typeConversion", "expressionList", 
                   "returnType", "genType", "genLiteral", "classType", "embeddedType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    STRING_LITERAL=32
    DECIMAL_LITERAL=33
    FLOAT_LITERAL=34
    BOOL_LITERAL=35
    CLASS=36
    ATTR=37
    STATE=38
    FUNC=39
    PRED=40
    OPER=41
    IF=42
    ELSE=43
    ELIF=44
    FOR=45
    WHILE=46
    RET=47
    BREAK=48
    CONT=49
    WHEN=50
    EFF=51
    EXEC=52
    INIT=53
    GOAL=54
    MAIN=55
    LIST=56
    BOOL=57
    STR=58
    FLOAT=59
    INT=60
    DOM=61
    NUM=62
    ID=63
    COMMENT=64
    WS=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CodeFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.ClassDeclarationContext,i)


        def mainDeclaration(self):
            return self.getTypedRuleContext(EvansParser.MainDeclarationContext,0)


        def getRuleIndex(self):
            return EvansParser.RULE_codeFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeFile" ):
                listener.enterCodeFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeFile" ):
                listener.exitCodeFile(self)




    def codeFile(self):

        localctx = EvansParser.CodeFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_codeFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.classDeclaration()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EvansParser.CLASS):
                    break

            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.MAIN:
                self.state = 85
                self.mainDeclaration()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(EvansParser.CLASS, 0)

        def ID(self):
            return self.getToken(EvansParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(EvansParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return EvansParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = EvansParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(EvansParser.CLASS)
            self.state = 89
            self.match(EvansParser.ID)
            self.state = 90
            self.match(EvansParser.T__0)
            self.state = 91
            self.classBody()
            self.state = 92
            self.match(EvansParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeList(self):
            return self.getTypedRuleContext(EvansParser.AttributeListContext,0)


        def stateList(self):
            return self.getTypedRuleContext(EvansParser.StateListContext,0)


        def goalList(self):
            return self.getTypedRuleContext(EvansParser.GoalListContext,0)


        def domainList(self):
            return self.getTypedRuleContext(EvansParser.DomainListContext,0)


        def constructorList(self):
            return self.getTypedRuleContext(EvansParser.ConstructorListContext,0)


        def functionList(self):
            return self.getTypedRuleContext(EvansParser.FunctionListContext,0)


        def predicateList(self):
            return self.getTypedRuleContext(EvansParser.PredicateListContext,0)


        def operatorList(self):
            return self.getTypedRuleContext(EvansParser.OperatorListContext,0)


        def getRuleIndex(self):
            return EvansParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)




    def classBody(self):

        localctx = EvansParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.ATTR:
                self.state = 94
                self.attributeList()


            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.STATE:
                self.state = 97
                self.stateList()


            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.GOAL:
                self.state = 100
                self.goalList()


            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.DOM:
                self.state = 103
                self.domainList()


            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.INIT:
                self.state = 106
                self.constructorList()


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.FUNC:
                self.state = 109
                self.functionList()


            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.PRED:
                self.state = 112
                self.predicateList()


            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EvansParser.OPER:
                self.state = 115
                self.operatorList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTR(self):
            return self.getToken(EvansParser.ATTR, 0)

        def genVarDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.GenVarDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.GenVarDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_attributeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeList" ):
                listener.enterAttributeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeList" ):
                listener.exitAttributeList(self)




    def attributeList(self):

        localctx = EvansParser.AttributeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attributeList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(EvansParser.ATTR)
            self.state = 119
            self.match(EvansParser.T__2)
            self.state = 121 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 120
                    self.genVarDeclaration()

                else:
                    raise NoViableAltException(self)
                self.state = 123 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE(self):
            return self.getToken(EvansParser.STATE, 0)

        def genVarDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.GenVarDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.GenVarDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_stateList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateList" ):
                listener.enterStateList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateList" ):
                listener.exitStateList(self)




    def stateList(self):

        localctx = EvansParser.StateListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stateList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(EvansParser.STATE)
            self.state = 126
            self.match(EvansParser.T__2)
            self.state = 128 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 127
                    self.genVarDeclaration()

                else:
                    raise NoViableAltException(self)
                self.state = 130 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOM(self):
            return self.getToken(EvansParser.DOM, 0)

        def domainDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.DomainDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.DomainDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_domainList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainList" ):
                listener.enterDomainList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainList" ):
                listener.exitDomainList(self)




    def domainList(self):

        localctx = EvansParser.DomainListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_domainList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(EvansParser.DOM)
            self.state = 133
            self.match(EvansParser.T__2)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.domainDeclaration()
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EvansParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIT(self):
            return self.getToken(EvansParser.INIT, 0)

        def constructorDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.ConstructorDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.ConstructorDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_constructorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorList" ):
                listener.enterConstructorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorList" ):
                listener.exitConstructorList(self)




    def constructorList(self):

        localctx = EvansParser.ConstructorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constructorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(EvansParser.INIT)
            self.state = 140
            self.match(EvansParser.T__2)
            self.state = 142 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 141
                self.constructorDeclaration()
                self.state = 144 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EvansParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(EvansParser.FUNC, 0)

        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.FunctionDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_functionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionList" ):
                listener.enterFunctionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionList" ):
                listener.exitFunctionList(self)




    def functionList(self):

        localctx = EvansParser.FunctionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(EvansParser.FUNC)
            self.state = 147
            self.match(EvansParser.T__2)
            self.state = 149 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 148
                self.functionDeclaration()
                self.state = 151 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EvansParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GoalListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOAL(self):
            return self.getToken(EvansParser.GOAL, 0)

        def goalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.GoalDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.GoalDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_goalList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoalList" ):
                listener.enterGoalList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoalList" ):
                listener.exitGoalList(self)




    def goalList(self):

        localctx = EvansParser.GoalListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_goalList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(EvansParser.GOAL)
            self.state = 154
            self.match(EvansParser.T__2)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 155
                self.goalDeclaration()
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EvansParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRED(self):
            return self.getToken(EvansParser.PRED, 0)

        def predicateDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.PredicateDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.PredicateDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_predicateList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateList" ):
                listener.enterPredicateList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateList" ):
                listener.exitPredicateList(self)




    def predicateList(self):

        localctx = EvansParser.PredicateListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_predicateList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(EvansParser.PRED)
            self.state = 161
            self.match(EvansParser.T__2)
            self.state = 163 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 162
                self.predicateDeclaration()
                self.state = 165 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EvansParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPER(self):
            return self.getToken(EvansParser.OPER, 0)

        def operatorDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EvansParser.OperatorDeclarationContext)
            else:
                return self.getTypedRuleContext(EvansParser.OperatorDeclarationContext,i)


        def getRuleIndex(self):
            return EvansParser.RULE_operatorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperatorList" ):
                listener.enterOperatorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperatorList" ):
                listener.exitOperatorList(self)




    def operatorList(self):

        localctx = EvansParser.OperatorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_operatorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(EvansParser.OPER)
            self.state = 168
            self.match(EvansParser.T__2)
            self.state = 170 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 169
                self.operatorDeclaration()
                self.state = 172 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EvansParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EvansParser.ID, 0)

        def domainBody(self):
            return self.getTypedRuleContext(EvansParser.DomainBodyContext,0)


        def getRuleIndex(self):
            return EvansParser.RULE_domainDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainDeclaration" ):
                listener.enterDomainDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainDeclaration" ):
                listener.exitDomainDeclaration(self)




    def domainDeclaration(self):

        localctx = EvansParser.DomainDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_domainDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(EvansParser.ID)
            self.state = 175
            self.match(EvansParser.T__0)
            self.state = 176
            self.domainBody()
            self.state = 177
            self.match(EvansParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EvansParser.ID, 0)

        def genCodeBlock(self):
            return self.getTypedRuleContext(EvansParser.GenCodeBlockContext,0)


        def genParameters(self):
            return self.getTypedRuleContext(EvansParser.GenParametersContext,0)


        def returnType(self):
            return self.getTypedRuleContext(EvansParser.ReturnTypeContext,0)


        def getRuleIndex(self):
            return EvansParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):
